--- a/Signup.css
+++ b/Signup.css
@@ -11,7 +11,7 @@
     background-position: center;
 } */ */
 
-.bg-img::after {
+ .bg-img::after {
     position: absolute;
     content: '';
     top: 0;
@@ -19,7 +19,7 @@
     height: 150%;
     width: 100%;
     background: rgba(0, 0, 0, 0.4);
-}
+} 
 
 .content {
     position: absolute;
@@ -35,13 +35,6 @@
     box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
 }
 
-/* input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid rgb(24, 23, 23);
-    border-radius: 4px;
-    resize: vertical;
-  } */
 
 .content header {
     color: #fff;
@@ -56,8 +49,7 @@
     height:100%;
     width: 100%;
     display: flex;
-  
-    background: rgba(75, 74, 74, 0.94);
+    background: rgba(255, 255, 255, 0.94);
 }
 
 .field span {
@@ -73,7 +65,7 @@
     background: transparent;
     border: none;
     outline: none;
-    color: rgb(70, 70, 70);
+    color: #222;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
 }
@@ -120,6 +112,10 @@ input[type="submit"]:hover {
     margin: 20px 0;
     font-family: 'Poppins', sans-serif;
 }
+button{
+    background: #6666ff;
+    margin-left: 30px;
+}
 
 .link {
     display: flex;
@@ -128,37 +124,7 @@ input[type="submit"]:hover {
     margin: 0 0 20px 0;
 }
 
-.facebook,
-.instagram {
-    width: 100%;
-    height: 45px;
-    line-height: 45px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
 
-.facebook {
-    margin-left: 0px;
-    background: #4267B2;
-    border: 1px solid #3e61a8;
-}
-
-.instagram {
-    background: linear-gradient(to right, #9900cc 0%, #ff3399 100%);
-    border: 1px solid linear-gradient(to right, #9900cc 0%, #ff3399 100%);
-}
-
-.facebook:hover {
-    background: #3e61a8;
-}
-
-.instagram:hover {
-    background: linear-gradient(to left, #9900cc 0%, #ff3399 100%);
-}
-
-.link i {
-    font-size: 17px;
-}
 
 .link span {
     font-size: 15px;
